✨ don't swap fonts to prevent flicker.

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  font-display: swap;
   src: local(''),
        url('/fonts/roboto-v29-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('/fonts/roboto-v29-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -13,7 +12,6 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
   src: local(''),
        url('/fonts/roboto-v29-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('/fonts/roboto-v29-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -24,7 +22,6 @@
   font-family: 'Noto Emoji';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
   src: local(''),
        url('/fonts/noto-emoji-v24-emoji-regular.woff2') format('woff2'),
        url('/fonts/noto-emoji-v24-emoji-regular.woff') format('woff');
